
* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[Unreleased]]

icon:check[] Core: Fixed a bug that caused an internal server error if a project was attempted to be created after any role with permissions to create projects was deleted.

[[v1.4.0]]
== 1.4.0 (24.01.2020)

icon:plus[] Security: User client certificate handling has been added to the Mesh Server.

The following settings have been added:

  * `server.sslPort` (Env: `MESH_HTTPS_PORT`) - SSL Port (Default: **8443**)
  * `server.http` (Env: `MESH_HTTP_ENABLE`) - Flag to enable http server (Default: **true**)
  * `server.clientAuthMode` (Env: `MESH_HTTP_SSL_CLIENT_AUTH_MODE`) - Authentication mode to control how client certificates should be handled. (Default: **none**)
  * `server.trustedCertPaths` (Env: `MESH_HTTP_SSL_TRUSTED_CERTS`) - List of certificates which will be trusted by the server.

The Gentics Mesh HTTPs server supports three client authentication modes:

* `none` - Reject client certificates during SSL handshake (**default**)
* `request` - Request client certificate. A client certificate will be used when provided. The request will also work when omitting the client cert.
* `require` - Requiring a client certificate. The ssl handshake will fail when no client certificate was provided.

More information can be found in the link:{{< relref "references.asciidoc" >}}#_https[HTTPs server section].

icon:plus[] Java Rest Client: The client configuration has been enhanced. It is now possible to specify a client certificate and key to be used by the REST client.

The following methods have been added to the config builder for `MeshRestClientConfig`:  

Methods to set the client key which will be used during SSL handshake:

  * `MeshRestClientConfig.Builder#setClientKey(String path)`
  * `MeshRestClientConfig.Builder#setClientKey(InputStream ins)` 